--- a/.github/workflows/create_tag.yml
+++ b/.github/workflows/create_tag.yml
@@ -37,9 +37,9 @@ jobs:
         id: bump_tag_version
         run: |
             # Extract the current version from the latest release tag
-            TAG=$(curl -u "${GITHUB_USERNAME}:${GITHUB_TOKEN}" -s "https://api.github.com/repos/bradoctech/seadoc-application/tags" | jq -r '.[0].name')
+            TAG=$(curl -u "${GITHUB_USERNAME}:${GITHUB_TOKEN}" -s "https://api.github.com/repos/igorpadovan/github_actions/tags" | jq -r '.[0].name')
             echo "Última versão: ${TAG}"
-            echo "TAG=${TAG}" >> $GITHUB_ENV
+            echo "TAG=${TAG}" >> ${GITHUB_ENV}
   
             current_tag=${TAG#v}
 
@@ -67,10 +67,10 @@ jobs:
               # Defina a branch de origem e destino
               DEV_BRANCH="origin/dev"
 
-              git switch "$DEV_BRANCH"
+              git switch "${DEV_BRANCH}"
               git pull
               
-              git tag "$NEW_TAG"
+              git tag "${NEW_TAG}"
              
-              echo "Push feito em '$NEW_TAG'"
-              git push origin $NEW_TAG
+              echo "Push feito em '${NEW_TAG}'"
+              git push origin ${NEW_TAG}
