--- a/.github/workflows/create-release-merge-on-main.yml
+++ b/.github/workflows/create-release-merge-on-main.yml
@@ -15,12 +15,14 @@ jobs:
     name: Release pushed tag
     runs-on: ubuntu-22.04
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Get latest tag
         id: get_lastest_tag
         run: |
             # Extract the current version from the latest release tag
             TAG=$(curl -u "${GITHUB_TOKEN}" -s "https://api.github.com/repos/igorpadovan/github_actions/tags" | jq -r '.[0].name')
-            echo "Última versão: ${TAG}"
+            echo "Ultima versão: ${TAG}"
             echo "TAG=${TAG}" >> ${GITHUB_ENV}
   
             current_tag=${TAG#v}
