echo environment name

--- a/.github/workflows/remote-upgrade.yml
+++ b/.github/workflows/remote-upgrade.yml
@@ -9,13 +9,13 @@ jobs:
   upgrade:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
-    environment: ${{ github.event.pull_request.base.ref }}
+    environment: ${{ github.event.inputs.environment }}
     
     steps:
-      - name: Debug Environment
+      - name: Echo environment
         run: |
-          echo "Running in environment: ${{ github.job.environment.name }}"
-          echo "Target Host: ${{ vars.TARGET_HOST }}"
+            echo "Current environment: ${{ github.environment.name }}"
+
       - name: Setup SSH Keys
         run: |
           mkdir -p ~/.ssh
