--- a/.github/workflows/remote-upgrade.yml
+++ b/.github/workflows/remote-upgrade.yml
@@ -6,16 +6,42 @@ on:
       - closed
 
 jobs:
+  get-environments:
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    permissions:
+      actions: read
+    outputs:
+      names: ${{ steps.set_env.outputs.names }}
+    steps:
+      - name: Get environments
+        uses: octokit/request-action@v2.3.0
+        id: get_env
+        with:
+          route: GET /repos/${{ github.repository }}/environments?per_page=100 # If we ever have >100 deployments, we'll need to paginate
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set output
+        id: set_env
+        run: echo "names=$(echo $NAMES | jq -c '[.[] | select(startswith("[${{ github.ref_name }}]"))]' -j)" >> $GITHUB_OUTPUT
+        env:
+          NAMES: ${{ toJson(fromJson(steps.get_env.outputs.data).environments.*.name) }}
+          
   upgrade:
+    needs:
+      - get-environments
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
-
-    environment: ${{ github.event.pull_request.base.ref }} # Dynamically set the environment based on the branch
+    strategy:
+      matrix:
+        environment: ${{ fromJson(needs.get-environments.outputs.names) }}
+    environment:
+      name: ${{ matrix.environment }}
 
     steps:
       - name: Echo environment
         run: |
-          echo "Current environment: ${{ github.environment }}"
+          echo "Current environment: ${{ matrix.environment }}}"
 
       - name: Setup SSH Keys
         run: |
