--- a/.github/workflows/remote-upgrade.yml
+++ b/.github/workflows/remote-upgrade.yml
@@ -5,7 +5,7 @@ on:
     types:
       - closed
 
-jobs:          
+jobs:
   upgrade:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
@@ -57,4 +57,8 @@ jobs:
 
       - name: Execute Remote Command
         run: |
-          ssh bridge 'ssh target "cd ${{ vars.APP_DIRECTORY }};make upgrade_seadoc"'
+          if [ ! -z "${{ vars.BRIDGE_HOST }}" ]; then
+            ssh ${{ vars.BRIDGE_HOST }} 'ssh target "cd ${{ vars.APP_DIRECTORY }} && make upgrade_seadoc"´
+          else
+            ssh target "cd ${{ vars.APP_DIRECTORY }} && make upgrade_seadoc"
+          fi
