--- a/.github/workflows/remote-upgrade.yml
+++ b/.github/workflows/remote-upgrade.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Execute Remote Command
         run: |
           if [ ! -z "${{ vars.BRIDGE_HOST }}" ]; then
-            ssh ${{ vars.BRIDGE_HOST }} 'ssh target "cd ${{ vars.APP_DIRECTORY }} && make upgrade_seadoc"´
+            ssh ${{ vars.BRIDGE_HOST }} 'ssh target "cd ${{ vars.APP_DIRECTORY }} && make upgrade_seadoc"'
           else
             ssh target "cd ${{ vars.APP_DIRECTORY }} && make upgrade_seadoc"
           fi
