--- a/.github/workflows/remote-upgrade.yml
+++ b/.github/workflows/remote-upgrade.yml
@@ -31,5 +31,5 @@ jobs:
           BRIDGE_USER: ${{ vars.BRIDGE_USER }}
           BRIDGE_SSH_PRIVATE_KEY: ${{ secrets.BRIDGE_SSH_PRIVATE_KEY }}
         run: |
-          chmod +x ${PWD}/.github/workflows/scripts/setup-ssh-and-deploy.sh
-          ./${PWD}/.github/workflows/scripts/setup-ssh-and-deploy.sh
+          chmod +x .github/workflows/scripts/setup-ssh-and-deploy.sh
+          ./.github/workflows/scripts/setup-ssh-and-deploy.sh
