split to merge on dev and on main

--- a/.github/workflows/deploy-homolog.yml
+++ b/.github/workflows/deploy-homolog.yml
@@ -1,9 +1,12 @@
 name: Deployment
 
 on:
-  pull_request:
-    types:
-      - closed
+    pull_request:
+      types:
+        - closed
+      branches: 
+        - dev
+        - homolog  
 
 jobs:
   deploy:
